compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@inline__spawned.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/inline/spawned.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.9 = bar()
return 

=======================
fn foo(x.1) -> 

---- block 0 ----
wait
temp.10 = x.1
temp.11 = temp.10
storeprop temp.11, 0
return 

=======================
fn bar() -> 

---- block 0 ----
temp.12 = int 5
temp.13 = spawn foo(temp.12)
temp.14 = int 8
temp.15 = foo(temp.14)
return 


----------- inline_small_functions -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.9 = bar()
return 

=======================
fn foo(x.1) -> 

---- block 0 ----
wait
temp.10 = x.1
temp.11 = temp.10
storeprop temp.11, 0
return 

=======================
fn bar() -> 

---- block 0 ----
temp.12 = int 5
temp.13 = spawn foo(temp.12)
temp.14 = int 8
jmp 2

---- block 2 ----
wait
temp.17 = temp.14
temp.18 = temp.17
storeprop temp.18, 0
jmp 4

---- block 4 ----
temp.16 = φ()
temp.15 = temp.16
jmp 1

---- block 1 ----
return 


----------- inline_small_functions -------------
=======================
fn @toplevel() -> 

---- block 0 ----
jmp 2

---- block 2 ----
temp.20 = int 5
temp.21 = spawn foo(temp.20)
temp.22 = int 8
jmp 3

---- block 3 ----
wait
temp.23 = temp.22
temp.24 = temp.23
storeprop temp.24, 0
jmp 4

---- block 4 ----
temp.25 = φ()
temp.26 = temp.25
jmp 5

---- block 5 ----
jmp 7

---- block 7 ----
temp.19 = φ()
temp.9 = temp.19
jmp 1

---- block 1 ----
return 

=======================
fn foo(x.1) -> 

---- block 0 ----
wait
temp.10 = x.1
temp.11 = temp.10
storeprop temp.11, 0
return 

=======================
fn bar() -> 

---- block 0 ----
temp.12 = int 5
temp.13 = spawn foo(temp.12)
temp.14 = int 8
jmp 2

---- block 2 ----
wait
temp.17 = temp.14
temp.18 = temp.17
storeprop temp.18, 0
jmp 4

---- block 4 ----
temp.16 = φ()
temp.15 = temp.16
jmp 1

---- block 1 ----
return 


----------- remove_unreferenced_functions -------------
=======================
fn @toplevel() -> 

---- block 0 ----
jmp 2

---- block 2 ----
temp.20 = int 5
temp.21 = spawn foo(temp.20)
temp.22 = int 8
jmp 3

---- block 3 ----
wait
temp.23 = temp.22
temp.24 = temp.23
storeprop temp.24, 0
jmp 4

---- block 4 ----
temp.25 = φ()
temp.26 = temp.25
jmp 5

---- block 5 ----
jmp 7

---- block 7 ----
temp.19 = φ()
temp.9 = temp.19
jmp 1

---- block 1 ----
return 

=======================
fn foo(x.1) -> 

---- block 0 ----
wait
temp.10 = x.1
temp.11 = temp.10
storeprop temp.11, 0
return
