compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@inline__statement_inline.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir/optimisations.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/ir/snapshot_tests/optimisations/inline/statement_inline.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.5 = int 6
foo(temp.5)
return 

=======================
fn foo(x.0) -> int

---- block 0 ----
temp.6 = x.0
temp.7 = int 5
temp.8 = temp.6 + temp.7
return temp.8


----------- inline_small_functions -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.5 = int 6
jmp 2

---- block 2 ----
temp.9 = temp.5
temp.10 = int 5
temp.11 = temp.9 + temp.10
jmp 4

---- block 4 ----
jmp 1

---- block 1 ----
return 

=======================
fn foo(x.0) -> int

---- block 0 ----
temp.6 = x.0
temp.7 = int 5
temp.8 = temp.6 + temp.7
return temp.8
