compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@inline__struct_function.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/inline/struct_function.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.26 = int 42
temp.27 = int 0
temp.3.x.28 = temp.26
temp.3.y.29 = temp.27
temp.30 = temp.3.x.28
p.x.31 = temp.30
temp.32 = temp.3.y.29
p.y.33 = temp.32
temp.34 = p.x.31
temp.13.x.35 = temp.34
temp.36 = p.y.33
temp.13.y.37 = temp.36
temp.38 = get_x(temp.13.x.35, temp.13.y.37)
storeprop temp.38, 0
return 

=======================
fn get_x(p.x.18, p.y.19) -> int

---- block 0 ----
temp.39 = p.x.18
temp.21.x.40 = temp.39
temp.41 = p.y.19
temp.21.y.42 = temp.41
temp.43 = temp.21.x.40
return temp.43


----------- inline_small_functions -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.26 = int 42
temp.27 = int 0
temp.3.x.28 = temp.26
temp.3.y.29 = temp.27
temp.30 = temp.3.x.28
p.x.31 = temp.30
temp.32 = temp.3.y.29
p.y.33 = temp.32
temp.34 = p.x.31
temp.13.x.35 = temp.34
temp.36 = p.y.33
temp.13.y.37 = temp.36
jmp 2

---- block 2 ----
temp.45 = temp.13.x.35
temp.21.x.47 = temp.45
temp.46 = temp.13.y.37
temp.21.y.49 = temp.46
temp.48 = temp.21.x.47
jmp 4

---- block 4 ----
temp.44 = φ(temp.48 from 2)
temp.38 = temp.44
jmp 1

---- block 1 ----
storeprop temp.38, 0
return 

=======================
fn get_x(p.x.18, p.y.19) -> int

---- block 0 ----
temp.39 = p.x.18
temp.21.x.40 = temp.39
temp.41 = p.y.19
temp.21.y.42 = temp.41
temp.43 = temp.21.x.40
return temp.43
