compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@inline__struct_return.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/inline/struct_return.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.2.x.27, temp.2.y.28 = origin()
temp.29 = temp.2.x.27
p.x.30 = temp.29
temp.31 = temp.2.y.28
p.y.32 = temp.31
temp.33 = p.x.30
temp.12.x.34 = temp.33
temp.35 = p.y.32
temp.12.y.36 = temp.35
temp.37 = temp.12.x.34
temp.38 = p.x.30
temp.17.x.39 = temp.38
temp.40 = p.y.32
temp.17.y.41 = temp.40
temp.42 = temp.17.y.41
temp.43 = temp.37 + temp.42
storeprop temp.43, 0
return 

=======================
fn origin() -> int, int

---- block 0 ----
temp.44 = int 0
temp.45 = int 0
temp.22.x.46 = temp.44
temp.22.y.47 = temp.45
return temp.22.x.46, temp.22.y.47


----------- inline_small_functions -------------
=======================
fn @toplevel() -> 

---- block 0 ----
jmp 2

---- block 2 ----
temp.50 = int 0
temp.51 = int 0
temp.22.x.52 = temp.50
temp.22.y.53 = temp.51
jmp 4

---- block 4 ----
temp.48 = φ(temp.22.x.52 from 2)
temp.49 = φ(temp.22.y.53 from 2)
temp.2.x.27 = temp.48
temp.2.y.28 = temp.49
jmp 1

---- block 1 ----
temp.29 = temp.2.x.27
p.x.30 = temp.29
temp.31 = temp.2.y.28
p.y.32 = temp.31
temp.33 = p.x.30
temp.12.x.34 = temp.33
temp.35 = p.y.32
temp.12.y.36 = temp.35
temp.37 = temp.12.x.34
temp.38 = p.x.30
temp.17.x.39 = temp.38
temp.40 = p.y.32
temp.17.y.41 = temp.40
temp.42 = temp.17.y.41
temp.43 = temp.37 + temp.42
storeprop temp.43, 0
return 

=======================
fn origin() -> int, int

---- block 0 ----
temp.44 = int 0
temp.45 = int 0
temp.22.x.46 = temp.44
temp.22.y.47 = temp.45
return temp.22.x.46, temp.22.y.47
